--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h1 class = "header_text">Marry me ???????</h1>
             </div>
             <div class="gif_container">
-                <img src="images/giphy.gif" alt="Cute animated illustration">
+                <img src="giphy.gif" alt="Cute animated illustration">
             </div>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
