--- a/tell.html
+++ b/tell.html
@@ -14,7 +14,7 @@
       </div>
 
     <div class="gif_container">
-      <!--    <img class="money" width=300 height=300 src="images/giphy2.gif" alt="Cute Animated Illustration">-->
+      <!--    <img class="money" width=300 height=300 src="giphy2.gif" alt="Cute Animated Illustration">-->
       </div>
     </div>
 
