--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,7 @@
                 <h1 class = "header_text">YOU BETTER !!!!</h1>
             </div>
             <div class="gif_container">
-                <img src="images/giphy3.gif" alt="Cute animated illustration">
+                <img src="giphy3.gif" alt="Cute animated illustration">
             </div>
         </div>
 
